--- a/src/main/resources/html/login.html
+++ b/src/main/resources/html/login.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
-    <title>TSE-Lizenzen</title>
+    <title>TSE-Lizenzen 1.1</title>
     <link href="favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon"/>
     <link href="css/style.css?version=2" rel="stylesheet" type="text/css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js" type="text/javascript"></script>
     <script src="js/base.js?version=4" type="text/javascript"></script>
     <script type="text/javascript">
-        var REST_AUTH = 'external/auth';
+        var REST_AUTH = 'internal/auth';
         var WRONG_AUTH_DATA = '&#10149; Bitte Passwort UND Benutzername eingeben';
         var AUTH_FAIL = '&#10149; Passwort oder Benutzername falsch';
 
@@ -78,7 +78,7 @@
 <body>
 <div class="app-header">
     <img class="app-logo" height="69" src="img/logo_roqqio.png" width="275">
-    <b>TSE-Lizenzen</b>
+    <b>TSE-Lizenzen 1.1</b>
 </div>
 <div class="login">
     <div class="login-space">
