--- a/src/main/resources/html/login.html
+++ b/src/main/resources/html/login.html
@@ -77,7 +77,7 @@
 </head>
 <body>
 <div class="app-header">
-    <img class="app-logo" height="69" src="img/logo_roqqio.png" width="275">
+    <img class="app-logo" height="69" src="img/logo.png" width="275">
     <b>TSE-Lizenzen 1.1</b>
 </div>
 <div class="login">
